Replace ngrok with localtunnel

--- a/spark_lab_template.ipynb
+++ b/spark_lab_template.ipynb
@@ -59,7 +59,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install pyngrok"
+    "!npm install -g localtunnel"
    ]
   },
   {
@@ -70,11 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "from pyngrok import ngrok\n",
-    "\n",
-    "for tunnel in ngrok.get_tunnels():\n",
-    "    ngrok.disconnect(tunnel.public_url)\n",
-    "ngrok.connect(4040).public_url"
+    "!lt --port 4040"
    ]
   },
   {
