Add nonblocking localtunnel

--- a/spark_lab_template.ipynb
+++ b/spark_lab_template.ipynb
@@ -70,7 +70,14 @@
    },
    "outputs": [],
    "source": [
-    "!lt --port 4040"
+    "import subprocess\n",
+    "import time\n",
+    "lt = subprocess.Popen([\"lt\", \"--host\", \"http://loca.lt\", \"--port\", \"4040\"], stdout=subprocess.PIPE)\n",
+    "while True:\n",
+    "  out = lt.stdout.readline()\n",
+    "  if out:\n",
+    "    break\n",
+    "print(out.decode('utf8'))"
    ]
   },
   {
@@ -135,7 +142,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.11.1 (main, Dec 23 2022, 09:28:24) [Clang 14.0.0 (clang-1400.0.29.202)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5c7b89af1651d0b8571dde13640ecdccf7d5a6204171d6ab33e7c296e100e08a"
+   }
   }
  },
  "nbformat": 4,
