Add localtunnel password

--- a/spark_lab_template.ipynb
+++ b/spark_lab_template.ipynb
@@ -81,6 +81,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Go to the address above and copy-paste the password below\n",
+    "!curl https://loca.lt/mytunnelpassword"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "pGNVFZw2y7fv"
